# bsp

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml
configs/curiosity_pre_training/: default.yaml
configs/dp_transformer/: default.yaml
configs/env/: humanoid.yaml  walker.yaml
configs/task_training/: default.yaml
configs/wandb/: default.yaml
data/: TD-MPC2 Data Parsing.ipynb  dims_df_0.csv  dims_df_1.csv  dims_df_10.csv  dims_df_13.csv  dims_df_14.csv  dims_df_16.csv  dims_df_17.csv  dims_df_18.csv  dims_df_19.csv  dims_df_3.csv  dims_df_4.csv  dims_df_5.csv  dims_df_6.csv  dims_df_7.csv  dims_df_8.csv  dims_df_9.csv  download_data.sh
notebooks/: Shimmy DM Control.ipynb  Untitled.ipynb
outputs/2026-05-25/17-46-10/.hydra/: config.yaml  hydra.yaml
outputs/2026-05-25/17-48-19/.hydra/: hydra.yaml
outputs/2026-05-25/17-52-18/.hydra/: hydra.yaml
src/bsp/: agent.py  buffer.py  env.py  finetune.py  logger.py  main.py  pretrain.py  pretrain_and_finetune.py  trainer.py  utils.py
src/bsp/common/: base_classes.py  nn_modules.py  replay_buffer.py  utils.py
src/bsp/finetuning/: agent.py  nn_modules.py  sb3_ppo_trainer.py  sb3_trainer.py  trainer.py
src/bsp/pretraining/: agent.py  dynamics_predictor.py  intrinsic_reward_env.py  nn_modules.py  sb3_ppo_trainer.py  trainer.py  utils.py
src/bsp/stable_baselines3/ppo/: ppo.py  (+3 more)
tests/: test_config_smoke.py  test_eval_video_smoke.py  test_finetuning_smoke.py  test_sb3_ppo_bsp_actor_smoke.py  test_sb3_ppo_pretrain_smoke.py  test_sb3_ppo_smoke.py  test_sb3_sac_smoke.py  test_shape_trace.py
(+58 files in other folders)
